# wire

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  agent.py  client.py  deploy-all.sh  install.sh  pyproject.toml  server.json  setup-mac.sh  smithery.yaml  status.sh  wire-mcp-server.py  wire_agent.py  wire_client.py  wire_mcp_server.py  wire_server.py
.github/workflows/: publish.yml
.well-known/mcp/: server-card.json
wire_pkg/: __init__.py  cli.py
