[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshpop-wire"
version = "1.1.0"
description = "Autonomous WireGuard mesh VPN with P2P, relay fallback, and MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "MeshPOP", email = "mpop@mpop.dev"}
]
keywords = ["wireguard", "vpn", "mesh", "p2p", "networking", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.28",
]

[project.scripts]
wire = "client:main"
wire-server = "server:main"
wire-agent = "agent:main"
wire-mcp = "wire_mcp_server:main"

[project.urls]
Homepage = "https://github.com/meshpop/wire"
Repository = "https://github.com/meshpop/wire"

[tool.setuptools]
py-modules = ["client", "server", "agent", "wire_mcp_server"]
